adding functionalities based on a draft

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             
             <section class="episode-details-section hidden">
                 <button class="back-button">← Back to Episodes</button>
+                <img class="episode-image" src="" alt="" style="max-width: 100%; border-radius: 10px; margin-bottom: 15px; display: none;">
                 <h2 class="episode-title"></h2>
                 <div class="episode-meta">
                     <span class="episode-code"></span>
@@ -101,6 +102,12 @@
                 </div> 
                 <h3>Characters in this episode:</h3>
                 <div class="episode-characters-grid"></div>
+            </section>
+
+            <section class="character-details-section hidden">
+                <button class="character-back-button">← Back to Characters</button>
+                <h3>Episodes:</h3>
+                <ul class="character-episodes-list"></ul>
             </section>
         </div>
     </main>
